# n_queens

./: README.md  board.py  board_utils.py  brute_force_solver.py  int_utils.py  main.py  main2.py  main3.py  main_2.py  pyproject.toml
algorithms/: back_tracking.py  brute_force.py  distinct.py  from_optimizer.py  genetic.py  infinite.py  optimize.py  particle_swarm.py  simulated_annealing.py  solve.py  transform.py  transpose.py  valid.py  with_transpositions.py
algorithms/particle_swarm/: __init__.py  particle.py  particle_swarm.py  swarm.py
domain/: board.py  list.py  problem.py  report.py  reporter.py
models/: board.py  board_utils.py  reporter.py
n_queens_solvers/: brute_force.py
solutions/: back_tracking.py  brute_force.py  from_optimizer.py  genetic.py  particle_swarm.py  simulated_annealing.py  sum_of_n_bits.py
solvers/: brute_force.py
