[tool.poetry]
name = "n_queens"
version = "0.1.0"
description = "Solve the n queens problem"
authors = ["swhustla <fdkelly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
