[project]
name = "n_queens"
version = "0.1.0"
description = "Solve the n queens problem"
authors = [{ name = "swhustla", email = "fdkelly@gmail.com" }, { name = "artfuldev", email = "hello@artful.dev" }]
requires-python = "~=3.13"
dependencies = [
    "pyrsistent>=0.18.1,<0.19",
    "numpy>=1.23.1,<2",
]

[dependency-groups]
dev = ["black>=22.6.0,<23"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
